--- a/index.html
+++ b/index.html
@@ -27,27 +27,31 @@
 
 <body>
 
-<h6>
-  <a target="_blank" href="./main.html">Главная</a>
-</h6>
+<div class="container content-space-t-3">
 
-<hr>
+  <h6>
+    <a class="btn btn-info" target="_blank" href="./main.html">Главная</a>
+  </h6>
 
-<h6>
-  <a target="_blank" href="./news.html">Пример новости</a>
-</h6>
+  <hr>
 
-<hr>
+  <h6>
+    <a class="btn btn-info" target="_blank" href="./news.html">Пример новости</a>
+  </h6>
 
-<h6>
-  <a target="_blank" href="./pool.html">Страница "Бассейны"</a>
-</h6>
+  <hr>
 
-<hr>
+  <h6>
+    <a class="btn btn-info" target="_blank" href="./pool.html">Страница "Бассейны"</a>
+  </h6>
 
-<h6>
-  <a target="_blank" href="./page.html">Страница "Об организации"</a>
-</h6>
+  <hr>
+
+  <h6>
+    <a class="btn btn-info" target="_blank" href="./page.html">Страница "Об организации"</a>
+  </h6>
+
+</div>
 
   <!-- JS Global Compulsory  -->
   <script src="./assets/vendor/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
