--- a/main.html
+++ b/main.html
@@ -212,22 +212,19 @@
     <div class="js-swiper-freemode swiper">
       <div class="swiper-wrapper">
         <div class="swiper-slide">
-          <img class="img-fluid" src="./assets/img/documentation/img1-lg.jpg" alt="Image Description">
+          <img class="img-fluid" src="./assets/img/1920x1080/MP5B2882.jpg" alt="Image Description">
         </div>
         <div class="swiper-slide">
-          <img class="img-fluid" src="./assets/img/documentation/img2-lg.jpg" alt="Image Description">
+          <img class="img-fluid" src="./assets/img/1920x1080/238_5384.jpg" alt="Image Description">
         </div>
         <div class="swiper-slide">
-          <img class="img-fluid" src="./assets/img/documentation/img3-lg.jpg" alt="Image Description">
+          <img class="img-fluid" src="./assets/img/1920x1080/N5NnNSkvDXY.jpg" alt="Image Description">
         </div>
         <div class="swiper-slide">
-          <img class="img-fluid" src="./assets/img/documentation/img4-lg.jpg" alt="Image Description">
+          <img class="img-fluid" src="./assets/img/1920x1080/MP5B3301.jpg" alt="Image Description">
         </div>
         <div class="swiper-slide">
-          <img class="img-fluid" src="./assets/img/documentation/img5-lg.jpg" alt="Image Description">
-        </div>
-        <div class="swiper-slide">
-          <img class="img-fluid" src="./assets/img/documentation/img6-lg.jpg" alt="Image Description">
+          <img class="img-fluid" src="./assets/img/1920x1080/MP5B7950.jpg" alt="Image Description">
         </div>
       </div>
 
@@ -239,7 +236,6 @@
 
     <!-- Swiper Pagination -->
     <div class="js-swiper-freemode-pagination swiper-pagination"></div>
-
     </div>
     <!-- End Hero -->
 
@@ -362,6 +358,7 @@
 
     <span class="divider-center"></span>
 
+    <div class="overflow-hidden bg-soft-primary">
     <div class="container content-space-1">
       <!-- Heading -->
       <div class="w-lg-65 text-center mx-lg-auto mb-5 mb-sm-7 mb-lg-10">
@@ -396,42 +393,44 @@
       </div>
     </div>
     </div>
-
-
-    <div class="container content-space-1">
-      <div class="row">
-        <div class="card card-bordered">
-          <div class="card-header">
-            <h3 class="card-header-title">Дворец спорта "Буртасы" - седьмое чудо Пензенской области</h3>
-          </div>
-          <div class="card-body">
-            <img src="https://burtasy.ru/images/s/palace02.jpg" class="rounded float-end border">
-            <p>Настоящим чудом современного строительства стал дворец спорта, названный в честь народности, некогда проживавшей на территории нынешней Пензенской области. В состав комплекса входит универсальная спортивная арена на 1700 зрителей, размеры - 72 х 33 м.</p>
-
-            <p>Возможно проведение соревнований по различным видам спорта, прежде всего, по спортивной и художественной гимнастике. Арена соответствует уровню, требуемому для организации международных соревнований.</p>
-
-            <p>Важнейшей составляющей комплекса является тренировочный гимнастический зал, который оснащен современным спортивным оборудованием.</p>
-
-            <p>Первая очередь комплекса введена в эксплуатацию в январе 2008 года. Сооружение имеет габариты в плане 192 х 57 м, общие габариты – 192 х 87 м.</p>
-
-            <p>В состав первой очереди входят медицинский центр, фойе, гардероб, раздевалки, обеспечивающие арену и тренировочный зал по спортивной гимнастике, а также гостиница на 105 номеров, зона для бутиков спортивного профиля, фитнес-зал и зал атлетической подготовки.</p>
-
-            <p>Вторая очередь комплекса включает в себя плавательный (50 х 25), и прыжковый бассейны (24 х 22), спроектированные в соответствии с олимпийскими требованиями, зал сухой подготовки.</p>
-
-            <p>Общая площадь помещений первой очереди комплекса составляет около 24 000 квадратных метров. Суммарная площадь помещений всего комплекса составит около 40 500 квадратных метров.</p>
-
-            <p>Введен в эксплуатацию ресторан европейской кухни, включающий в себя два зала, общей площадью 870 кв.м.</p>
-
-            <a href="#" class="btn btn-primary">Подробнее о дворце спорта "Буртасы"</a>
-          </div>
-
-        </div>
-      </div>
     </div>
 
-    <div class="container content-space-1">
+    <div class="container">
+    <div class="row">
+      <div class="card border-0">
+        <div class="card-header">
+          <h3 class="card-header-title">Дворец спорта "Буртасы" - седьмое чудо Пензенской области</h3>
+        </div>
+        <div class="card-body">
+          <img src="https://burtasy.ru/images/s/palace02.jpg" class="rounded float-end border">
+          <p>Настоящим чудом современного строительства стал дворец спорта, названный в честь народности, некогда проживавшей на территории нынешней Пензенской области. В состав комплекса входит универсальная спортивная арена на 1700 зрителей, размеры - 72 х 33 м.</p>
+
+          <p>Возможно проведение соревнований по различным видам спорта, прежде всего, по спортивной и художественной гимнастике. Арена соответствует уровню, требуемому для организации международных соревнований.</p>
+
+          <p>Важнейшей составляющей комплекса является тренировочный гимнастический зал, который оснащен современным спортивным оборудованием.</p>
+
+          <p>Первая очередь комплекса введена в эксплуатацию в январе 2008 года. Сооружение имеет габариты в плане 192 х 57 м, общие габариты – 192 х 87 м.</p>
+
+          <p>В состав первой очереди входят медицинский центр, фойе, гардероб, раздевалки, обеспечивающие арену и тренировочный зал по спортивной гимнастике, а также гостиница на 105 номеров, зона для бутиков спортивного профиля, фитнес-зал и зал атлетической подготовки.</p>
+
+          <p>Вторая очередь комплекса включает в себя плавательный (50 х 25), и прыжковый бассейны (24 х 22), спроектированные в соответствии с олимпийскими требованиями, зал сухой подготовки.</p>
+
+          <p>Общая площадь помещений первой очереди комплекса составляет около 24 000 квадратных метров. Суммарная площадь помещений всего комплекса составит около 40 500 квадратных метров.</p>
+
+          <p>Введен в эксплуатацию ресторан европейской кухни, включающий в себя два зала, общей площадью 870 кв.м.</p>
+
+          <a href="#" class="btn btn-primary">Подробнее о дворце спорта "Буртасы"</a>
+        </div>
+
+      </div>
+    </div>
+    </div>
+
+    <span class="divider-center"><i class="bi-star"></i></span>
+
+    <div class="container">
       <div class="row">
-        <div class="card card-bordered">
+        <div class="card border-0">
           <div class="card-header">
             <h3 class="card-header-title">Школа гимнастики</h3>
           </div>
@@ -481,7 +480,6 @@
   <!-- ========== FOOTER ========== -->
   <footer class="bg-dark">
     <div class="container">
-
       <div class="border-bottom border-white-10">
         <div class="row py-6">
           <div class="col-6 col-sm-4 col-lg mb-7 mb-lg-0">
@@ -626,11 +624,20 @@
 
       var freemode = new Swiper('.js-swiper-freemode', {
         slidesPerView: 3,
-        spaceBetween: 30,
+        spaceBetween: 20,
         freeMode: true,
+        autoplay: {
+          delay: 3000,
+          disableOnInteraction: false,
+        },
+        loop: true,
         pagination: {
           el: '.js-swiper-freemode-pagination',
           clickable: true,
+        },
+        navigation: {
+          nextEl: '.js-swiper-freemode-button-next',
+          prevEl: '.js-swiper-freemode-button-prev',
         },
       });
 
