--- a/main.html
+++ b/main.html
@@ -36,7 +36,7 @@
     <nav class="js-mega-menu navbar-nav-wrap">
       <!-- Default Logo -->
       <a class="navbar-brand" href="./index.html" aria-label="Unify">
-        <img class="navbar-brand-logo" src="./assets/svg/logos/burtasy.png" alt="Image Description">
+        <img class="navbar-brand-logo" src="./assets/svg/logos/burtasy4.png" alt="Дворец спорта Буртасы">
       </a>
       <!-- End Default Logo -->
 
@@ -212,6 +212,27 @@
     <div class="js-swiper-freemode swiper">
       <div class="swiper-wrapper">
         <div class="swiper-slide">
+          <img class="img-fluid" src="./assets/img/1920x1080/MP5B0359.jpg" alt="Image Description">
+        </div>
+        <div class="swiper-slide">
+          <img class="img-fluid" src="./assets/img/1920x1080/271123.jpg" alt="Image Description">
+        </div>
+        <div class="swiper-slide">
+          <img class="img-fluid" src="./assets/img/1920x1080/MP5B4891.jpg" alt="Image Description">
+        </div>
+        <div class="swiper-slide">
+          <img class="img-fluid" src="./assets/img/1920x1080/MP5B6017.jpg" alt="Image Description">
+        </div>
+        <div class="swiper-slide">
+          <img class="img-fluid" src="./assets/img/1920x1080/MP5B6161.jpg" alt="Image Description">
+        </div>
+        <div class="swiper-slide">
+          <img class="img-fluid" src="./assets/img/1920x1080/MP5B7935.jpg" alt="Image Description">
+        </div>
+        <div class="swiper-slide">
+          <img class="img-fluid" src="./assets/img/1920x1080/MP5B8207.jpg" alt="Image Description">
+        </div>
+        <div class="swiper-slide">
           <img class="img-fluid" src="./assets/img/1920x1080/MP5B2882.jpg" alt="Image Description">
         </div>
         <div class="swiper-slide">
@@ -222,9 +243,6 @@
         </div>
         <div class="swiper-slide">
           <img class="img-fluid" src="./assets/img/1920x1080/MP5B3301.jpg" alt="Image Description">
-        </div>
-        <div class="swiper-slide">
-          <img class="img-fluid" src="./assets/img/1920x1080/MP5B7950.jpg" alt="Image Description">
         </div>
       </div>
 
@@ -402,7 +420,7 @@
           <h3 class="card-header-title">Дворец спорта "Буртасы" - седьмое чудо Пензенской области</h3>
         </div>
         <div class="card-body">
-          <img src="https://burtasy.ru/images/s/palace02.jpg" class="rounded float-end border">
+          <img src="https://burtasy.ru/images/s/palace02.jpg" class="mx-10 rounded float-end border">
           <p>Настоящим чудом современного строительства стал дворец спорта, названный в честь народности, некогда проживавшей на территории нынешней Пензенской области. В состав комплекса входит универсальная спортивная арена на 1700 зрителей, размеры - 72 х 33 м.</p>
 
           <p>Возможно проведение соревнований по различным видам спорта, прежде всего, по спортивной и художественной гимнастике. Арена соответствует уровню, требуемому для организации международных соревнований.</p>
@@ -435,7 +453,7 @@
             <h3 class="card-header-title">Школа гимнастики</h3>
           </div>
           <div class="card-body">
-            <img src="https://burtasy.ru/images/s/school10.jpg" class="rounded float-end border">
+            <img src="https://burtasy.ru/images/s/school10.jpg" class="mx-10 rounded float-end border">
 
 
               <p>В 2021 г. в школе обучалось 1079 детей: 434 человека на отделении спортивной гимнастики и 645 на отделении художественной гимнастики.</p>
