--- a/news.html
+++ b/news.html
@@ -26,7 +26,7 @@
 
 <body>
 <!-- ========== HEADER ========== -->
-<header id="header" class="navbar navbar-expand-lg navbar-end navbar-dark bg-dark navbar-absolute-top navbar-show-hide" 
+<header id="header" class="navbar navbar-expand-lg navbar-end navbar-dark bg-dark navbar-absolute-top navbar-show-hide"
         data-hs-header-options='{
             "fixMoment": 0,
             "fixEffect": "slide"
@@ -35,7 +35,7 @@
     <nav class="js-mega-menu navbar-nav-wrap">
       <!-- Default Logo -->
       <a class="navbar-brand" href="./index.html" aria-label="Unify">
-        <img class="navbar-brand-logo" src="./assets/svg/logos/burtasy.png" alt="Image Description">
+        <img class="navbar-brand-logo" src="./assets/svg/logos/burtasy4.png" alt="Дворец спорта Буртасы">
       </a>
       <!-- End Default Logo -->
 
@@ -60,7 +60,7 @@
                     "maxWidth": "50rem"
                   }
                 }'>
-            <a id="blogMegaMenu" class="hs-mega-menu-invoker nav-link dropdown-toggle " href="#" role="button" aria-expanded="false">Новости</a>
+            <a id="blogMegaMenu" class="hs-mega-menu-invoker nav-link dropdown-toggle text-white" href="#" role="button" aria-expanded="false">Новости</a>
 
             <!-- Mega Menu -->
             <div class="hs-mega-menu dropdown-menu" aria-labelledby="blogMegaMenu" style="min-width: 12rem;">
@@ -114,7 +114,7 @@
 
           <!-- Дворец спорта -->
           <li class="hs-has-sub-menu nav-item">
-            <a class="hs-mega-menu-invoker nav-link dropdown-toggle" href="#" id="menuPalace" aria-expanded="false">
+            <a class="hs-mega-menu-invoker nav-link dropdown-toggle text-white" href="#" id="menuPalace" aria-expanded="false">
               Дворец спорта
             </a>
 
@@ -133,7 +133,7 @@
 
           <!-- Школа гимнастики -->
           <li class="hs-has-sub-menu nav-item">
-            <a class="hs-mega-menu-invoker nav-link dropdown-toggle" href="#" id="menuSchool" aria-expanded="false">
+            <a class="hs-mega-menu-invoker nav-link dropdown-toggle text-white" href="#" id="menuSchool" aria-expanded="false">
               Школа гимнастики
             </a>
 
@@ -152,7 +152,7 @@
 
           <!-- Об организации -->
           <li class="hs-has-mega-menu nav-item">
-            <a id="pagesMegaMenu" class="hs-mega-menu-invoker nav-link dropdown-toggle " href="#" role="button" aria-expanded="false">Об организации</a>
+            <a id="pagesMegaMenu" class="hs-mega-menu-invoker nav-link dropdown-toggle text-white" href="#" role="button" aria-expanded="false">Об организации</a>
 
             <!-- Mega Menu -->
             <div class="hs-mega-menu hs-position-right dropdown-menu w-100" aria-labelledby="pagesMegaMenu" style="min-width: 42rem;">
